Fix table first column width. Fix offcanvas text alignment. Fix sidebar resizing with viewport dimension

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,7 @@ ul {
     max-width: 150px;
     min-width: 60px;
     height: 100%;
+    flex-shrink: 0;
 
     a {
       text-decoration: none;
@@ -217,6 +218,16 @@ ul {
 
     ._dashboard_body {
 
+      ._next_classes {
+
+        table {
+          thead {
+            th:first-child {
+              width: 60%;
+            }
+          }
+        }
+      }
 
       ._faq {
 
